clusters/k4/kubernetes/apps/database/cnpg/app/tcproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: postgres
  rules:
    - backendRefs:
        - name: pooler-session-rw
          port: 5432
